# AITOUTIAO

./: .gitignore  AGENT.md  _batch_style_demo.py  _crop_watermark.py  _debug_pipeline.py  _run_tests.bat  check_deps.py  pipeline.py  run.bat  streamlit_app.py  video_一切都是真的，原来它们早就在这里..._top_0_0-transcription-202607022148.txt
video-transcriber/: .env.example  .gitignore  CODE_REVIEW_REPORT.md  MANUAL_SETUP.md  PROJECT_SUMMARY.md  README.md  _load_err.txt  _load_result.txt  _run_log.txt  _test_load_only.py  _test_offline.py  _test_transcribe.py  _test_v2.py  _test_v3.py  _transcribe_local.py  _v2_err.txt  _v2_out.txt  _v3_out.txt  check_gpu.py  environment.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  setup_runtime.py  webmain.py
video-transcriber/api/: __init__.py  apimain.py  websocket.py
video-transcriber/config/: __init__.py  constants.py  settings.py
video-transcriber/core/: __init__.py  downloader.py  engine.py  sensevoice_transcriber.py
video-transcriber/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
video-transcriber/docs/: deployment_guide.md  subtitle_alignment_logic.md  technical_specification.md
video-transcriber/scripts/: build_portable.py  test_wsl.sh  vt.bat
video-transcriber/services/: __init__.py  file_service.py  task_service.py  transcription_service.py
video-transcriber/tests/: conftest.py  test_api.py  test_chunking_drift.py  test_engine.py  test_forced_aligner_pure.py  test_output_formatter.py  test_paragraph_formatter.py  test_sensevoice_pure_logic.py  (+4 more)
(+114 files in other folders)
