[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-transcriber"
version = "2.0.0"
description = "音视频转文本工具 - 基于 SenseVoice 的高精度多语言语音识别"
requires-python = ">=3.10"

[project.scripts]
vt = "webmain:cli"

[tool.setuptools]
py-modules = ["webmain"]
